--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
 dependencies {
     //start
     implementation 'androidx.room:room-ktx:2.6.1'
+    implementation 'androidx.activity:activity:1.8.0'
     kapt 'androidx.room:room-compiler:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
